--- a/trocacor/contador/carrosel/navbarResp/index.html
+++ b/trocacor/contador/carrosel/navbarResp/index.html
@@ -14,20 +14,21 @@
 </head>
 <body>
     <header>
-        <h1 class="title"><strong>Coding</strong> Addict</h1>
-        <nav class="container-nav">
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Projects</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
-            <span class="reoder invisible">
-                <p>texto</p>
-                <img src="./assets/reorder.svg" alt="">
-            </span>
-        </nav>    
+        <h1 class="title">Rocktseat</h1>
+        <span class="material-icons reorder">
+            <i class="icon">reorder</i>
+        </span>
     </header>
+    <nav class="container-nav">
+        <ul class="list">
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Projects</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+    </nav>
+            
+  
 
     <script src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
